# backend/src/shared/dto/filename.dto.ts
@@ -1,0 +1,10 @@
+import { IsDefined, IsString } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class FilenameDto {
+
+  @ApiProperty()
+  @IsDefined()
+  @IsString()
+  contentType: string;
+}
